handle all changes for exceptions and api url

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,9 +2,11 @@ error.token=Your verification token has expired. Please request a new one.
 ################ User ####################
 error.user.username=Please enter a username.
 error.user.password=Please enter a password.
+error.user.gender=Please enter a Gender.
 error.user.email=Please enter an email address.
 error.user.phone=Please enter a mobile phone number.
 error.user.scope=Scope is required. Please specify a valid scope.
+error.user.birthDate=Please enter a Birth date.
 error.user.invalid.scope=Invalid scope. Only 'USER' is allowed.
 error.user.conservatism=Conservatism value is required. Please provide it.
 error.user.city=Please enter a city.
@@ -26,6 +28,7 @@ error.user.age=Age cannot be negative. Please enter a valid age.
 ################ Request ####################
 error.request.notfound=No request found with ID: {0}.
 error.org.notfound=No organization found with ID: {0}.
+error.request.notfoundID=Either userId or orgId must be provided
 error.request.no_requests=No requests available.
 error.request.id.null=Request ID cannot be empty. Please provide a valid ID.
 error.request.delete=Request has been deleted successfully.
@@ -93,7 +96,6 @@ error.org.verificationRequired=Please verify your organization to continue.
 ################ Registration & Verification ################
 user.register.success=User registered successfully! Please check your email to verify your account.
 organization.register.success=Organization registered successfully! Please check your email to verify your account.
-email.verify.success=Your email has been verified successfully!
-email.verify.invalid=Invalid verification code. Please check and try again.
 password.reset.success=Your password has been reset successfully!
 password.reset.invalid=Invalid password reset code. Please request a new one.
+
