handle reset password

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -64,8 +64,17 @@ mail.failed.send=Failed to send email: {0}. Please check the details and try aga
 email.not.found=Email address not found. Please check and try again.
 otp.success=OTP has been sent to your email successfully.
 otp.send.error=Failed to send OTP email. Please try again later.
+otp.not.found=OTP not found.
+otp.user.not=User not found or email mismatch.
+otp.org.not=Organization not found or email mismatch
+otp.type.invalid=Invalid OTP type
+otp.invalid=Invalid OTP.
+otp.verified=OTP verified.
 email.not.verified=Email is not verified. Please complete the verification process.
 verification.code.expired=Verification code has expired. Please request a new one.
+email.required=Email is required.
+otp.verify.required=Email and OTP are required.
+password.reset.required=Email, OTP and new password are required.
 ################ Donations ################
 error.donation.notFound=No donations found matching the criteria.
 error.invalid.id=Invalid ID: {0}. Please check and try again.
