github actions CI

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -70,6 +70,7 @@ otp.org.not=Organization not found or email mismatch
 otp.type.invalid=Invalid OTP type
 otp.invalid=Invalid OTP.
 otp.verified=OTP verified.
+rate.limit=Rate limit exceeded. Please try again later.
 email.not.verified=Email is not verified. Please complete the verification process.
 verification.code.expired=Verification code has expired. Please request a new one.
 email.required=Email is required.
