Handle Update Users

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -46,7 +46,7 @@ org.license.required=License number is required. Please provide a valid license.
 org.name.required=Organization name is required.
 org.password.required=Password is required. Please enter a valid password.
 org.phone.required=Mobile phone number is required. Please enter a valid number.
-org.scope.required=Scope must be set to 'organization'.
+org.scope.required=Scope must be set to 'ORGANIZATION'.
 org.city.required=City is required. Please provide the city name.
 org.conservatism.required=Conservatism is required. Please specify it.
 org.fcm.token.required=FCM token is required. Please provide a valid token.
