Handle send mail when accept req

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -86,9 +86,17 @@ error.request.alreadyAccepted=This request has already been accepted.
 error.request.alreadyDeleted=This request has already been deleted.
 notification.requestAcceptedTitle=Request Accepted \u2705
 notification.requestAcceptedMessage=Your blood donation request has been accepted by {0}.
-success.donation.requestDeleted=Donation request has been successfully deleted.
+success.donation.requestDeleted=The donation request has been successfully deleted.
 error.globalException=An error occurred: {0}.
 error.unknown=Unexpected error: {0}.
+donation.request.accepted=Donation request accepted successfully.
+donation.request.accepted.email.sent=Donation request accepted successfully and notification email sent.
+error.donation.alreadyConfirmed=This donation has already been confirmed and cannot be modified
+error.donation.notValidForAccept=This donation is not in a valid state to accept requests
+# Error messages
+error.invalid.input=Invalid input data
+error.request.notLinked=The specified request is not linked to this donation
+error.donation.confirmed=Cannot delete confirmed donations
 ################ Security ################
 security.permission=You do not have permission to access this resource.
 ################ Authentication ################
